# bajiru-speaker-recognition

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
cpp_impl/: CMakeLists.txt  README.md
cpp_impl/artifacts/Linkjiru.vst3/Contents/Resources/: moduleinfo.json
cpp_impl/artifacts/Linkjiru.vst3/Contents/x86_64-win/: Linkjiru.vst3
cpp_impl/src/linkjiru/: AnalysisThread.h  BufferWriterThread.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RmsAnalyzer.h  SharedRingBuffer.h  VTubeStudioClient.cpp  VTubeStudioClient.h
cpp_impl/tests/: bench_chain_latency.cpp  bench_csv.h  bench_ring_buffer.cpp  mock_vts_server.h  test_shared_ring_buffer.cpp
python/: README.md  pyproject.toml
src/baji_recognition/: main.py
tests/: test_recognition.py
